Fixed vertical alignment

--- a/core/app/assets/stylesheets/fontello.css.less
+++ b/core/app/assets/stylesheets/fontello.css.less
@@ -66,6 +66,8 @@
     /* you can be more comfortable with increased icons size */
     font-size: 120%;
 
+    vertical-align: -5%;
+
     /* Uncomment for 3D effect */
     /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
   }
